# airthings-mqtt

./: Makefile  README.md  pyproject.toml  requirements.txt
config/: config-example.yaml
src/airthingsmqtt/: __init__.py  __main__.py
